checklests changes _STA

--- a/Test Documentation/Checklists/Web_app/Checklists for learn.epam.com _STA course.files/stylesheet.css
+++ b/Test Documentation/Checklists/Web_app/Checklists for learn.epam.com _STA course.files/stylesheet.css
@@ -57,39 +57,35 @@ td
 	mso-rotate:0;}
 .xl65
 	{mso-style-parent:style0;
-	font-weight:700;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
-	vertical-align:middle;
-	border:.5pt solid black;
-	background:#A9D08E;
-	mso-pattern:black none;
-	white-space:normal;}
+	vertical-align:middle;}
 .xl66
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
-	vertical-align:middle;}
+	vertical-align:middle;
+	border:.5pt solid black;
+	white-space:normal;}
 .xl67
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
+	border:.5pt solid black;}
 .xl68
 	{mso-style-parent:style0;
+	font-weight:700;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	vertical-align:middle;
-	border:.5pt solid black;}
+	white-space:normal;}
 .xl69
 	{mso-style-parent:style0;
-	font-weight:700;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
@@ -97,19 +93,21 @@ td
 	white-space:normal;}
 .xl70
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	vertical-align:middle;
-	white-space:normal;}
-.xl71
-	{mso-style-parent:style0;
 	text-align:left;
 	vertical-align:top;
 	white-space:normal;}
-.xl72
+.xl71
 	{mso-style-parent:style0;
 	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:left;
+	vertical-align:middle;
+	border:.5pt solid black;
+	white-space:normal;}
+.xl72
+	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
@@ -119,21 +117,20 @@ td
 	white-space:normal;}
 .xl73
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:left;
-	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
-.xl74
-	{mso-style-parent:style0;
 	text-align:left;
 	vertical-align:top;
 	border:.5pt solid black;
 	white-space:normal;}
+.xl74
+	{mso-style-parent:style0;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:center;
+	vertical-align:middle;}
 .xl75
 	{mso-style-parent:style0;
+	font-weight:700;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
@@ -146,10 +143,10 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	text-align:center;
-	vertical-align:middle;}
+	vertical-align:middle;
+	border:.5pt solid black;}
 .xl77
 	{mso-style-parent:style0;
-	font-weight:700;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
@@ -158,17 +155,9 @@ td
 	border:.5pt solid black;}
 .xl78
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid black;}
-.xl79
-	{mso-style-parent:style0;
 	border:.5pt solid black;
 	white-space:normal;}
-.xl80
+.xl79
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
@@ -180,28 +169,16 @@ td
 	border-bottom:.5pt solid black;
 	border-left:.5pt solid black;
 	white-space:normal;}
+.xl80
+	{mso-style-parent:style0;
+	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:left;
+	vertical-align:middle;
+	white-space:normal;}
 .xl81
-	{mso-style-parent:style0;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:left;
-	vertical-align:middle;
-	border:.5pt solid black;
-	background:#A9D08E;
-	mso-pattern:black none;
-	white-space:normal;}
-.xl82
-	{mso-style-parent:style0;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:left;
-	vertical-align:middle;
-	white-space:normal;}
-.xl83
 	{mso-style-parent:style0;
 	color:red;
 	font-weight:700;
@@ -211,7 +188,7 @@ td
 	text-align:left;
 	vertical-align:middle;
 	white-space:normal;}
-.xl84
+.xl82
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
@@ -219,7 +196,7 @@ td
 	text-align:left;
 	vertical-align:middle;
 	border:.5pt solid black;}
-.xl85
+.xl83
 	{mso-style-parent:style0;
 	color:black;
 	font-family:Calibri;
@@ -229,14 +206,14 @@ td
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
-.xl86
+.xl84
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;}
-.xl87
+.xl85
 	{mso-style-parent:style0;
 	color:black;
 	font-family:Calibri;
@@ -245,7 +222,7 @@ td
 	text-align:left;
 	vertical-align:middle;
 	border:.5pt solid black;}
-.xl88
+.xl86
 	{mso-style-parent:style0;
 	color:black;
 	font-family:Calibri;
@@ -256,7 +233,7 @@ td
 	border:.5pt solid black;
 	background:#E2EFDA;
 	mso-pattern:black none;}
-.xl89
+.xl87
 	{mso-style-parent:style0;
 	color:red;
 	font-weight:700;
@@ -264,7 +241,7 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	vertical-align:middle;}
-.xl90
+.xl88
 	{mso-style-parent:style0;
 	color:red;
 	font-weight:700;
@@ -273,7 +250,7 @@ td
 	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;}
-.xl91
+.xl89
 	{mso-style-parent:style0;
 	font-weight:700;
 	font-family:Calibri;
@@ -285,7 +262,7 @@ td
 	border-right:.5pt solid black;
 	border-bottom:.5pt solid black;
 	border-left:.5pt solid black;}
-.xl92
+.xl90
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
@@ -296,7 +273,7 @@ td
 	border-right:.5pt solid black;
 	border-bottom:.5pt solid black;
 	border-left:.5pt solid black;}
-.xl93
+.xl91
 	{mso-style-parent:style0;
 	color:black;
 	font-weight:700;
@@ -310,6 +287,21 @@ td
 	background:#A9D08E;
 	mso-pattern:black none;
 	white-space:normal;}
+.xl92
+	{mso-style-parent:style0;
+	color:black;
+	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	mso-number-format:"\@";
+	vertical-align:top;
+	border:.5pt solid black;
+	background:#A9D08E;
+	mso-pattern:black none;}
+.xl93
+	{mso-style-parent:style0;
+	vertical-align:top;}
 .xl94
 	{mso-style-parent:style0;
 	color:black;
@@ -318,45 +310,30 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	mso-number-format:"\@";
+	text-align:center;
 	vertical-align:top;
 	border:.5pt solid black;
 	background:#A9D08E;
 	mso-pattern:black none;}
 .xl95
 	{mso-style-parent:style0;
+	text-align:center;
 	vertical-align:top;}
 .xl96
 	{mso-style-parent:style0;
-	color:black;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	mso-number-format:"\@";
 	text-align:center;
 	vertical-align:top;
-	border:.5pt solid black;
-	background:#A9D08E;
-	mso-pattern:black none;}
+	border:.5pt solid black;}
 .xl97
 	{mso-style-parent:style0;
-	text-align:center;
-	vertical-align:top;}
+	vertical-align:top;
+	border:.5pt solid black;}
 .xl98
-	{mso-style-parent:style0;
-	text-align:center;
-	vertical-align:top;
-	border:.5pt solid black;}
-.xl99
-	{mso-style-parent:style0;
-	vertical-align:top;
-	border:.5pt solid black;}
-.xl100
 	{mso-style-parent:style0;
 	vertical-align:top;
 	border:.5pt solid black;
 	white-space:normal;}
-.xl101
+.xl99
 	{mso-style-parent:style16;
 	color:#0563C1;
 	text-decoration:underline;
@@ -364,31 +341,68 @@ td
 	text-align:center;
 	vertical-align:top;
 	border:.5pt solid black;}
-.xl102
+.xl100
 	{mso-style-parent:style0;
 	color:windowtext;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
-.xl103
+.xl101
 	{mso-style-parent:style0;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
-.xl104
+.xl102
 	{mso-style-parent:style0;
 	text-align:left;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
-.xl105
+.xl103
 	{mso-style-parent:style0;
 	font-weight:700;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
+.xl104
+	{mso-style-parent:style0;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	vertical-align:top;
+	white-space:normal;}
+.xl105
+	{mso-style-parent:style0;
+	text-align:center;
+	vertical-align:middle;
+	border:.5pt solid black;}
 .xl106
 	{mso-style-parent:style0;
+	color:#E2EFDA;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	vertical-align:middle;}
+.xl107
+	{mso-style-parent:style0;
+	color:black;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	mso-number-format:"\@";
+	vertical-align:middle;
+	border:.5pt solid black;}
+.xl108
+	{mso-style-parent:style0;
+	color:black;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	mso-number-format:"\@";
+	vertical-align:middle;}
+.xl109
+	{mso-style-parent:style0;
+	font-size:14.0pt;
 	font-weight:700;
 	text-align:left;
 	vertical-align:middle;
@@ -396,26 +410,16 @@ td
 	background:#A9D08E;
 	mso-pattern:black none;
 	white-space:normal;}
-.xl107
-	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	vertical-align:top;
-	white-space:normal;}
-.xl108
-	{mso-style-parent:style0;
-	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid black;}
-.xl109
-	{mso-style-parent:style0;
-	color:#E2EFDA;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	vertical-align:middle;}
 .xl110
+	{mso-style-parent:style0;
+	font-size:14.0pt;
+	font-weight:700;
+	vertical-align:middle;
+	border:.5pt solid black;
+	background:#A9D08E;
+	mso-pattern:black none;
+	white-space:normal;}
+.xl111
 	{mso-style-parent:style0;
 	font-weight:700;
 	font-family:Calibri;
@@ -426,7 +430,7 @@ td
 	border:.5pt solid black;
 	background:#A9D08E;
 	mso-pattern:black none;}
-.xl111
+.xl112
 	{mso-style-parent:style0;
 	color:black;
 	font-weight:700;
@@ -439,17 +443,6 @@ td
 	background:#E2EFDA;
 	mso-pattern:black none;
 	white-space:normal;}
-.xl112
-	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:left;
-	vertical-align:middle;
-	border-top:.5pt solid black;
-	border-right:.5pt solid black;
-	border-bottom:none;
-	border-left:.5pt solid black;}
 .xl113
 	{mso-style-parent:style0;
 	font-family:Calibri;
@@ -457,7 +450,7 @@ td
 	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
-	border-top:none;
+	border-top:.5pt solid black;
 	border-right:.5pt solid black;
 	border-bottom:none;
 	border-left:.5pt solid black;}
@@ -470,19 +463,18 @@ td
 	vertical-align:middle;
 	border-top:none;
 	border-right:.5pt solid black;
-	border-bottom:.5pt solid black;
+	border-bottom:none;
 	border-left:.5pt solid black;}
 .xl115
 	{mso-style-parent:style0;
-	color:black;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
-	mso-font-charset:1;
+	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
-	border-top:.5pt solid black;
+	border-top:none;
 	border-right:.5pt solid black;
-	border-bottom:none;
+	border-bottom:.5pt solid black;
 	border-left:.5pt solid black;}
 .xl116
 	{mso-style-parent:style0;
@@ -492,11 +484,23 @@ td
 	mso-font-charset:1;
 	text-align:left;
 	vertical-align:middle;
+	border-top:.5pt solid black;
+	border-right:.5pt solid black;
+	border-bottom:none;
+	border-left:.5pt solid black;}
+.xl117
+	{mso-style-parent:style0;
+	color:black;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:1;
+	text-align:left;
+	vertical-align:middle;
 	border-top:none;
 	border-right:.5pt solid black;
 	border-bottom:.5pt solid black;
 	border-left:.5pt solid black;}
-.xl117
+.xl118
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
@@ -508,7 +512,7 @@ td
 	border-bottom:none;
 	border-left:.5pt solid black;
 	white-space:normal;}
-.xl118
+.xl119
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
@@ -520,7 +524,7 @@ td
 	border-bottom:none;
 	border-left:.5pt solid black;
 	white-space:normal;}
-.xl119
+.xl120
 	{mso-style-parent:style0;
 	color:black;
 	font-family:Calibri;
@@ -532,7 +536,7 @@ td
 	border-right:.5pt solid black;
 	border-bottom:none;
 	border-left:.5pt solid black;}
-.xl120
+.xl121
 	{mso-style-parent:style0;
 	color:black;
 	font-weight:700;
@@ -540,15 +544,6 @@ td
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
-.xl121
-	{mso-style-parent:style0;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
@@ -558,11 +553,20 @@ td
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
-	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
 .xl123
+	{mso-style-parent:style0;
+	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:center;
+	vertical-align:middle;
+	border:.5pt solid black;
+	white-space:normal;}
+.xl124
 	{mso-style-parent:style0;
 	color:windowtext;
 	font-size:14.0pt;
@@ -572,7 +576,7 @@ td
 	border:.5pt solid black;
 	background:#C6E0B4;
 	mso-pattern:black none;}
-.xl124
+.xl125
 	{mso-style-parent:style0;
 	color:black;
 	font-weight:700;
@@ -583,20 +587,3 @@ td
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
-.xl125
-	{mso-style-parent:style0;
-	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	mso-number-format:"\@";
-	vertical-align:middle;
-	border:.5pt solid black;}
-.xl126
-	{mso-style-parent:style0;
-	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	mso-number-format:"\@";
-	vertical-align:middle;}
