back button style

--- a/Test_Documentation/Defect_Reports/DefectReports_like_web_for_STA_course.files/stylesheet.css
+++ b/Test_Documentation/Defect_Reports/DefectReports_like_web_for_STA_course.files/stylesheet.css
@@ -286,11 +286,11 @@ td
 	mso-pattern:black none;
 	white-space:normal;}
 .xl89
-	{mso-style-parent:style16;
-	color:#0563C1;
-	text-decoration:underline;
-	text-underline-style:single;
+	{mso-style-parent:style0;
+	font-size:16.0pt;
+	font-weight:700;
 	mso-number-format:"\@";
+	text-align:left;
 	vertical-align:top;
 	border-top:none;
 	border-right:none;
@@ -298,11 +298,16 @@ td
 	border-left:none;
 	white-space:normal;}
 .xl90
-	{mso-style-parent:style0;
-	font-size:16.0pt;
-	font-weight:700;
+	{mso-style-parent:style16;
+	color:#0563C1;
+	text-decoration:underline;
+	text-underline-style:single;
 	mso-number-format:"\@";
-	text-align:left;
+	vertical-align:top;
+	white-space:normal;}
+.xl91
+	{mso-style-parent:style0;
+	mso-number-format:"\@";
 	vertical-align:top;
 	border-top:none;
 	border-right:none;
