--- a/Test_Documentation/Checklists/Web_app/Checklists_for_learn.epam.com_STA_course.files/stylesheet.css
+++ b/Test_Documentation/Checklists/Web_app/Checklists_for_learn.epam.com_STA_course.files/stylesheet.css
@@ -343,15 +343,29 @@ td
 	vertical-align:middle;
 	white-space:normal;}
 .xl100
+	{mso-style-parent:style16;
+	color:#0563C1;
+	text-decoration:underline;
+	text-underline-style:single;
+	mso-number-format:"\@";
+	vertical-align:top;
+	border-top:none;
+	border-right:none;
+	border-bottom:.5pt solid black;
+	border-left:none;
+	white-space:normal;}
+.xl101
 	{mso-style-parent:style0;
 	font-weight:700;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
+	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid black;
-	white-space:normal;}
-.xl101
+	background:#A9D08E;
+	mso-pattern:black none;}
+.xl102
 	{mso-style-parent:style0;
 	color:black;
 	font-weight:700;
@@ -364,39 +378,7 @@ td
 	background:#E2EFDA;
 	mso-pattern:black none;
 	white-space:normal;}
-.xl102
-	{mso-style-parent:style0;
-	color:black;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:left;
-	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
 .xl103
-	{mso-style-parent:style0;
-	color:windowtext;
-	font-size:14.0pt;
-	font-weight:700;
-	text-align:left;
-	vertical-align:middle;
-	border:.5pt solid black;
-	background:#C6E0B4;
-	mso-pattern:black none;}
-.xl104
-	{mso-style-parent:style0;
-	color:black;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
-.xl105
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
@@ -407,7 +389,18 @@ td
 	border-right:.5pt solid black;
 	border-bottom:none;
 	border-left:.5pt solid black;}
-.xl106
+.xl104
+	{mso-style-parent:style0;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:left;
+	vertical-align:middle;
+	border-top:none;
+	border-right:.5pt solid black;
+	border-bottom:none;
+	border-left:.5pt solid black;}
+.xl105
 	{mso-style-parent:style0;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
@@ -418,27 +411,42 @@ td
 	border-right:.5pt solid black;
 	border-bottom:.5pt solid black;
 	border-left:.5pt solid black;}
+.xl106
+	{mso-style-parent:style0;
+	color:black;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:1;
+	text-align:left;
+	vertical-align:middle;
+	border-top:.5pt solid black;
+	border-right:.5pt solid black;
+	border-bottom:none;
+	border-left:.5pt solid black;}
 .xl107
 	{mso-style-parent:style0;
-	font-weight:700;
+	color:black;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:center;
+	mso-font-charset:1;
+	text-align:left;
 	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
+	border-top:none;
+	border-right:.5pt solid black;
+	border-bottom:.5pt solid black;
+	border-left:.5pt solid black;}
 .xl108
 	{mso-style-parent:style0;
-	font-weight:700;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
-	text-align:center;
+	text-align:left;
 	vertical-align:middle;
-	border:.5pt solid black;
-	background:#A9D08E;
-	mso-pattern:black none;}
+	border-top:.5pt solid black;
+	border-right:.5pt solid black;
+	border-bottom:none;
+	border-left:.5pt solid black;
+	white-space:normal;}
 .xl109
 	{mso-style-parent:style0;
 	font-family:Calibri;
@@ -449,7 +457,8 @@ td
 	border-top:none;
 	border-right:.5pt solid black;
 	border-bottom:none;
-	border-left:.5pt solid black;}
+	border-left:.5pt solid black;
+	white-space:normal;}
 .xl110
 	{mso-style-parent:style0;
 	color:black;
@@ -458,55 +467,58 @@ td
 	mso-font-charset:1;
 	text-align:left;
 	vertical-align:middle;
-	border-top:.5pt solid black;
+	border-top:none;
 	border-right:.5pt solid black;
 	border-bottom:none;
 	border-left:.5pt solid black;}
 .xl111
 	{mso-style-parent:style0;
 	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:1;
-	text-align:left;
-	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid black;
-	border-bottom:.5pt solid black;
-	border-left:.5pt solid black;}
-.xl112
-	{mso-style-parent:style0;
+	font-weight:700;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
-	text-align:left;
+	text-align:center;
 	vertical-align:middle;
-	border-top:.5pt solid black;
-	border-right:.5pt solid black;
-	border-bottom:none;
-	border-left:.5pt solid black;
+	border:.5pt solid black;
+	white-space:normal;}
+.xl112
+	{mso-style-parent:style0;
+	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	vertical-align:middle;
+	border:.5pt solid black;
 	white-space:normal;}
 .xl113
 	{mso-style-parent:style0;
+	font-weight:700;
+	font-family:Calibri;
+	mso-generic-font-family:auto;
+	mso-font-charset:0;
+	text-align:center;
+	vertical-align:middle;
+	border:.5pt solid black;
+	white-space:normal;}
+.xl114
+	{mso-style-parent:style0;
+	color:windowtext;
+	font-size:14.0pt;
+	font-weight:700;
+	text-align:left;
+	vertical-align:middle;
+	border:.5pt solid black;
+	background:#C6E0B4;
+	mso-pattern:black none;}
+.xl115
+	{mso-style-parent:style0;
+	color:black;
+	font-weight:700;
 	font-family:Calibri;
 	mso-generic-font-family:auto;
 	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid black;
-	border-bottom:none;
-	border-left:.5pt solid black;
+	border:.5pt solid black;
 	white-space:normal;}
-.xl114
-	{mso-style-parent:style0;
-	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:1;
-	text-align:left;
-	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid black;
-	border-bottom:none;
-	border-left:.5pt solid black;}
