--- a/Test_Documentation/Checklists/Web_app/Checklists_for_learn.epam.com_STA_course.files/stylesheet.css
+++ b/Test_Documentation/Checklists/Web_app/Checklists_for_learn.epam.com_STA_course.files/stylesheet.css
@@ -57,88 +57,55 @@ td
 	mso-rotate:0;}
 .xl65
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	vertical-align:middle;}
 .xl66
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
 .xl67
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	vertical-align:middle;
 	border:.5pt solid black;}
 .xl68
 	{mso-style-parent:style0;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	vertical-align:middle;
 	white-space:normal;}
 .xl69
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	vertical-align:middle;
 	white-space:normal;}
 .xl70
 	{mso-style-parent:style0;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
 .xl71
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
 .xl72
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:center;
 	vertical-align:middle;}
 .xl73
 	{mso-style-parent:style0;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:center;
 	vertical-align:middle;}
 .xl74
 	{mso-style-parent:style0;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid black;}
 .xl75
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:center;
 	vertical-align:middle;
 	border:.5pt solid black;}
@@ -148,9 +115,6 @@ td
 	white-space:normal;}
 .xl77
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	border-top:none;
@@ -161,9 +125,6 @@ td
 .xl78
 	{mso-style-parent:style0;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	white-space:normal;}
@@ -171,52 +132,34 @@ td
 	{mso-style-parent:style0;
 	color:red;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	white-space:normal;}
 .xl80
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	border:.5pt solid black;}
 .xl81
 	{mso-style-parent:style0;
 	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
 .xl82
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;}
 .xl83
 	{mso-style-parent:style0;
 	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:1;
 	text-align:left;
 	vertical-align:middle;
 	border:.5pt solid black;}
 .xl84
 	{mso-style-parent:style0;
 	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	mso-number-format:"\@";
 	vertical-align:middle;
 	border:.5pt solid black;
@@ -226,25 +169,16 @@ td
 	{mso-style-parent:style0;
 	color:red;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	vertical-align:middle;}
 .xl86
 	{mso-style-parent:style0;
 	color:red;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;}
 .xl87
 	{mso-style-parent:style0;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
@@ -253,9 +187,6 @@ td
 	border-left:.5pt solid black;}
 .xl88
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:center;
 	vertical-align:middle;
 	border-top:none;
@@ -270,153 +201,135 @@ td
 	white-space:normal;}
 .xl90
 	{mso-style-parent:style0;
+	font-weight:700;
 	vertical-align:middle;
 	border:.5pt solid black;
 	white-space:normal;}
 .xl91
 	{mso-style-parent:style0;
-	text-align:left;
-	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
+	color:#E2EFDA;
+	vertical-align:middle;}
 .xl92
 	{mso-style-parent:style0;
-	font-weight:700;
+	color:black;
+	mso-number-format:"\@";
 	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
+	border:.5pt solid black;}
 .xl93
 	{mso-style-parent:style0;
-	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid black;}
+	color:black;
+	mso-number-format:"\@";
+	vertical-align:middle;}
 .xl94
 	{mso-style-parent:style0;
-	color:#E2EFDA;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	vertical-align:middle;}
+	font-size:14.0pt;
+	font-weight:700;
+	text-align:left;
+	vertical-align:middle;
+	border:.5pt solid black;
+	background:#A9D08E;
+	mso-pattern:black none;
+	white-space:normal;}
 .xl95
 	{mso-style-parent:style0;
-	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	mso-number-format:"\@";
+	font-size:14.0pt;
+	font-weight:700;
 	vertical-align:middle;
-	border:.5pt solid black;}
+	border:.5pt solid black;
+	background:#A9D08E;
+	mso-pattern:black none;
+	white-space:normal;}
 .xl96
-	{mso-style-parent:style0;
-	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	mso-number-format:"\@";
-	vertical-align:middle;}
-.xl97
-	{mso-style-parent:style0;
-	font-size:14.0pt;
-	font-weight:700;
-	text-align:left;
-	vertical-align:middle;
-	border:.5pt solid black;
-	background:#A9D08E;
-	mso-pattern:black none;
-	white-space:normal;}
-.xl98
-	{mso-style-parent:style0;
-	font-size:14.0pt;
-	font-weight:700;
-	vertical-align:middle;
-	border:.5pt solid black;
-	background:#A9D08E;
-	mso-pattern:black none;
-	white-space:normal;}
-.xl99
-	{mso-style-parent:style16;
-	color:#0563C1;
-	font-size:12.0pt;
-	text-decoration:underline;
-	text-underline-style:single;
-	text-align:left;
-	vertical-align:middle;
-	white-space:normal;}
-.xl100
 	{mso-style-parent:style16;
 	color:#0563C1;
 	text-decoration:underline;
 	text-underline-style:single;
 	mso-number-format:"\@";
+	text-align:right;
 	vertical-align:top;
 	border-top:none;
 	border-right:none;
 	border-bottom:.5pt solid black;
 	border-left:none;
 	white-space:normal;}
-.xl101
-	{mso-style-parent:style0;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid black;
-	background:#A9D08E;
-	mso-pattern:black none;}
-.xl102
+.xl97
 	{mso-style-parent:style0;
 	color:black;
 	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	border:.5pt solid black;
 	background:#E2EFDA;
 	mso-pattern:black none;
 	white-space:normal;}
-.xl103
+.xl98
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
+	color:black;
+	font-weight:700;
+	text-align:left;
+	vertical-align:middle;
+	border:.5pt solid black;
+	white-space:normal;}
+.xl99
+	{mso-style-parent:style0;
+	color:windowtext;
+	font-size:14.0pt;
+	font-weight:700;
+	text-align:left;
+	vertical-align:middle;
+	border:.5pt solid black;
+	background:#C6E0B4;
+	mso-pattern:black none;}
+.xl100
+	{mso-style-parent:style0;
+	color:black;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border:.5pt solid black;
+	white-space:normal;}
+.xl101
+	{mso-style-parent:style0;
 	text-align:left;
 	vertical-align:middle;
 	border-top:.5pt solid black;
 	border-right:.5pt solid black;
 	border-bottom:none;
 	border-left:.5pt solid black;}
-.xl104
+.xl102
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:left;
-	vertical-align:middle;
-	border-top:none;
-	border-right:.5pt solid black;
-	border-bottom:none;
-	border-left:.5pt solid black;}
-.xl105
-	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	border-top:none;
 	border-right:.5pt solid black;
 	border-bottom:.5pt solid black;
 	border-left:.5pt solid black;}
+.xl103
+	{mso-style-parent:style0;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border:.5pt solid black;
+	white-space:normal;}
+.xl104
+	{mso-style-parent:style0;
+	font-weight:700;
+	text-align:center;
+	vertical-align:middle;
+	border:.5pt solid black;
+	background:#A9D08E;
+	mso-pattern:black none;}
+.xl105
+	{mso-style-parent:style0;
+	text-align:left;
+	vertical-align:middle;
+	border-top:none;
+	border-right:.5pt solid black;
+	border-bottom:none;
+	border-left:.5pt solid black;}
 .xl106
 	{mso-style-parent:style0;
 	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:1;
 	text-align:left;
 	vertical-align:middle;
 	border-top:.5pt solid black;
@@ -426,9 +339,6 @@ td
 .xl107
 	{mso-style-parent:style0;
 	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:1;
 	text-align:left;
 	vertical-align:middle;
 	border-top:none;
@@ -437,9 +347,6 @@ td
 	border-left:.5pt solid black;}
 .xl108
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	border-top:.5pt solid black;
@@ -449,9 +356,6 @@ td
 	white-space:normal;}
 .xl109
 	{mso-style-parent:style0;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
 	text-align:left;
 	vertical-align:middle;
 	border-top:none;
@@ -462,9 +366,6 @@ td
 .xl110
 	{mso-style-parent:style0;
 	color:black;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:1;
 	text-align:left;
 	vertical-align:middle;
 	border-top:none;
@@ -472,53 +373,10 @@ td
 	border-bottom:none;
 	border-left:.5pt solid black;}
 .xl111
-	{mso-style-parent:style0;
-	color:black;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
-.xl112
-	{mso-style-parent:style0;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
-.xl113
-	{mso-style-parent:style0;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid black;
-	white-space:normal;}
-.xl114
-	{mso-style-parent:style0;
-	color:windowtext;
-	font-size:14.0pt;
-	font-weight:700;
+	{mso-style-parent:style16;
+	color:#0563C1;
+	font-size:12.0pt;
+	text-decoration:underline;
+	text-underline-style:single;
 	text-align:left;
-	vertical-align:middle;
-	border:.5pt solid black;
-	background:#C6E0B4;
-	mso-pattern:black none;}
-.xl115
-	{mso-style-parent:style0;
-	color:black;
-	font-weight:700;
-	font-family:Calibri;
-	mso-generic-font-family:auto;
-	mso-font-charset:0;
-	text-align:left;
-	vertical-align:middle;
-	border:.5pt solid black;
 	white-space:normal;}
